# irc_rust

./: .gitignore  Cargo.toml  Makefile  README.md  grcov.yml
.github/workflows/: bench.yml  nightly.yml  rust.yml  stable.yml
bench/: Cargo.toml
bench/src/: bench.rs  bench_parsed.rs  lib.rs
dev/bench/: data.js
lib/: Cargo.toml  LICENSE
lib/src/: builder.rs  errors.rs  lib.rs  message.rs  params.rs  parsed.rs  partial.rs  prefix.rs  query.rs  tags.rs  test.rs  tokenizer.rs
src/: bench.rs  builder.rs  errors.rs  lib.rs  lib_test.rs  message.rs  params.rs  prefix.rs  tags.rs  test.rs
