[package]
name = "irc-rust"
version = "0.2.0"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"
description = "IRC Helper easing the access and creation of IRC Messages"
documentation = "https://docs.rs/irc_rust"
homepage = "https://github.com/MoBlaa/irc_rust"
repository = "https://github.com/MoBlaa/irc_rust"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.111", features = ["derive"]}

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.53"
