[package]
name = "irc-rust"
version = "0.3.0"
authors = ["mo_blaa <mo.blaa@pm.me>"]
edition = "2018"
description = "IRC Helper easing the access and creation of IRC Messages"
documentation = "https://docs.rs/irc_rust"
homepage = "https://github.com/MoBlaa/irc_rust"
repository = "https://github.com/MoBlaa/irc_rust"
license = "MIT"
readme = "README.md"
keywords = ["irc", "api"]
categories = ["parser-implementations", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.111", optional = true, features = ["derive"]}

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.53"
