[package]
name = "irc-rust-bench"
version = "0.1.0"
authors = ["moblaa <moblaa@pm.me>"]
edition = "2018"
description = "Benchmarking project for irc-rust to enable building for stable"
license = "MIT"
repository = "https://github.com/MoBlaa/irc_rust.git"
readme = "../README.md"
keywords = ["benchmarks"]
categories = ["benchmarks"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc-rust = { path = "../lib" }

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.53"
